changes made to the inline code

--- a/index.Rmd
+++ b/index.Rmd
@@ -655,13 +655,13 @@ subplot(diff_plotly,hydro_plotly,margin = 0.10,titleX = TRUE,titleY = TRUE) %>%
 ```
 
 
-In figure \@ref(fig:cmp), we utilised a coding tip we learnt in lecture 4 to help us visualize the plot better. We used the "forcats::fct_reorder" function to reorder the way the countries are arranged. Our code displays the countries' value in a descending order. Thus countries with a lower difference value/ pumped hydro value will be displayed last. However, since we used the "coord_flip" function, we reversed the axes and now our graph appears to show countries with a lower difference value/ pumped hydro value at the top of the plot.
+In figure \@ref(fig:cmp), we utilized a coding tip we learnt in lecture 4 to help us visualize the plot better. We used the "forcats::fct_reorder" function to reorder the way the countries are arranged. Our code displays the countries' value in a descending order. Thus countries with a lower difference value/ pumped hydro value will be displayed last. However, since we used the "coord_flip" function, we reversed the axes and now our graph appears to show countries with a lower difference value/ pumped hydro value at the top of the plot.
 
 Looking at the metadata and dataset, we notice that the pumped hydro power and hydro power have been put together as electricity produced by hydro power. When researching into hydro power and pumped hydro power, it can be said that they are different ways of producing electricity using water as their source (@altenergymag).
 
-Hence, we can find the amount of electricity produced by each of the techniques using a bar graph such as \@ref(fig:cmp). We notice that the electricity produced by hydro power is higher than that of pumped hydro power. For example, Norway for all the years (2016, 2017, 2018) clearly it shows that there is a huge amount of difference in the electricity production where it is **`r  hydro_pro %>% filter(country_name == "Norway" & year == 2016) %>% select(country_name,avg_energy)` ** for year 2016,**`r  hydro_pro %>% filter(country_name == "Norway" & year == 2017) %>% select(country_name,avg_energy)` ** for year 2017, **`r  hydro_pro %>% filter(country_name == "Norway" & year == 2018) %>% select(country_name,avg_energy)`** for year 2018 , whereas, electricity produced by the same country through the pumped hydro power technique is **`r  electricity_prod %>% select(country_name,pumped_hydro_power) %>%  filter(country_name == "Norway" & year == 2016) %>% select(pumped_hydro_power)`** for year 2016 , **`r  electricity_prod %>% select(country_name,pumped_hydro_power) %>%  filter(country_name == "Norway" & year == 2017) %>% select(pumped_hydro_power)` ** for year 2017, **`r  electricity_prod %>% select(country_name,pumped_hydro_power) %>%  filter(country_name == "Norway" & year == 2018) %>% select(pumped_hydro_power)`** for the year 2018.
+Hence, we can find the amount of electricity produced by each of the techniques using a bar graph such as \@ref(fig:cmp). We notice that the electricity produced by hydro power is higher than that of pumped hydro power. For example, Norway clearly shows that there is a huge amount of difference in the electricity production where the energy produced by hydro power is **`r  hydro_pro %>% filter(country_name == "Norway" & year == 2016) %>% pull(avg_energy)` ** Gwh for year 2016,**`r  hydro_pro %>% filter(country_name == "Norway" & year == 2017) %>% pull(avg_energy)` ** Gwh for year 2017, **`r  hydro_pro %>% filter(country_name == "Norway" & year == 2018) %>% pull(avg_energy)`** Gwh for year 2018. Whereas, electricity produced by the same country through the pumped hydro power technique is **`r  electricity_prod %>% select(country_name,pumped_hydro_power) %>%  filter(country_name == "Norway" & year == 2016) %>% pull(pumped_hydro_power)`** Gwh for year 2016 , **`r  electricity_prod %>% select(country_name,pumped_hydro_power) %>%  filter(country_name == "Norway" & year == 2017) %>% pull(pumped_hydro_power)` ** Gwh for year 2017, **`r  electricity_prod %>% select(country_name,pumped_hydro_power) %>%  filter(country_name == "Norway" & year == 2018) %>% pull(pumped_hydro_power)`** Gwh for the year 2018.
 
-Just like Norway, every other country has a very low amount of pumped hydro power produced compared to the hydro power within the country. Some of the countries like Georgia and Serbia have very low counts of hydro power but even less or around 0 GWh amount of electricity produced by either of the two techniques.
+Just like Norway, every other country has a very low amount of pumped hydro power produced compared to the hydro power. Some of the countries like Georgia and Serbia have very low counts of hydro power but even less or around 0 GWh amount of electricity produced by either of the two techniques meaning either they do not use pumped hydro power as one of their techniques or the data is not available for us.
 
 
 ## How efficient is it to produce electricity using Pumped Hydro power?
@@ -754,7 +754,9 @@ xaxis3 = list(title = ""))
 
 Now, we compared the two dataframes, energy_types and country_totals for the energy type "Pumped hydro power". There was something out of the ordinary in the country_totals table where the column type had a value *"energy absorbed for pumping"*, which really caught our attention. On further analyzing what this could be, we compared the amount of electricity produced by the pumped hydro power and the amount of energy consumed by the pumped hydro power to produce the same energy for different countries.
 
-Figure \@ref(fig:pumped-power) shows a bar graph with countries on its y-axis and the difference in energy produced & absorbed within each of those countries across three years shown on the x-axis. **The years 2016 and 2017 have negative values which indicates that the energy absorbed by the pumped hydro power technique was higher than the energy it produced **. Although 2018 is also similar and holds true to the above statement, there are some countries which have improved its consumption:production ratio over the years. For instance, let's have a look at  **`r binded_hydro %>% filter(country_name == "Austria" & year == 2016) %>% select(energy_used)`** but in **`r binded_hydro %>% filter(country_name == "Austria" & year == 2018) %>% select(energy)`**, it was one of the top countries for having a huge turn over in the consumption:production ratio. Countries like *`r binded_hydro %>% filter(country_name == "Germany" & year == 2016) %>% select(energy_used)`* , *`r binded_hydro %>% filter(country_name == "Germany" & year == 2017) %>% select(energy_used)`* and in *`r binded_hydro %>% filter(country_name == "Germany" & year == 2018) %>% select(energy_used)`* have reduced the amount of energy consumed/absorbed for production of energy.
+Figure \@ref(fig:pumped-power) shows a bar graph with countries on its y-axis and the difference in energy produced & absorbed within each of those countries across three years shown on the x-axis. **The years 2016 and 2017 have negative values which indicates that the energy absorbed by the pumped hydro power technique was higher than the energy it produced **. Although 2018 is also similar and holds true to the above statement, there are some countries which have improved its consumption:production ratio over the years. For instance, let's have a look at Austria which has showed a significant change through the years with a energy production of **`r binded_hydro %>% filter(country_name == "Austria" & year == 2016) %>% pull(Diff_prod)`** Gwh in year 2016 but in **`r binded_hydro %>% filter(country_name == "Austria" & year == 2018) %>% pull(Diff_prod)`** Gwh for the year 2018, it was one of the top countries for having a huge turn over in the consumption:production ratio. Countries like Germany had more consumption than production with **`r binded_hydro %>% filter(country_name == "Germany" & year == 2016) %>% pull(Diff_prod)`** Gwh in the year 2016 , although it had a slight decrease in the consumption of energy with **`r binded_hydro %>% filter(country_name == "Germany" & year == 2017) %>% pull(Diff_prod)`** in the year 2017, they are still working towards reduction of consumption:production ratio with **`r binded_hydro %>% filter(country_name == "Germany" & year == 2018) %>% pull(Diff_prod)`** in the year 2018 which is good. (minus values indicate that the consumption is higher than the production rate of energy)
+
+There are still many countries which have incorporated pumped hydro power for production of energy but are still lagging in reducing the consumption to production ratio.
 
 ## What has the trend been like for EU countries to achieve their 2020 renewable energy target?
 
