adding inline R code

--- a/index.Rmd
+++ b/index.Rmd
@@ -786,11 +786,11 @@ Figure \@ref(fig:target-plot) shows the % share of renewable energy consumed fro
 
 The dot point in 2020 represents the 2020 target for the respective country. Please take note that some countries do not have a target value as is mentioned in the limitations section. Also there is no value recorded for 2019 and so this does not appear on the graph. 
 
-From the graph, countries like Iceland, Finland, Norway and Sweden have the highest share of renewable energy. Norway consumed `r euro_table %>% filter(Country == "Norway" & Year == 2018) %>% select(Percentage)`% of it's energy as renewable energy in 2018, followed by Iceland at 72.18%, Norway at 54.64% and Finland at 41.16%. Although Iceland and Norway don't have a 2020 target, they are well above their European counterparts and it is fair to say they have surpassed all renewable energy target level. Finland has surpassed their 2020 target level in 2014 and Sweden all the back in 2012!
+From the graph, countries like Iceland, Finland, Norway and Sweden have the highest share of renewable energy. Norway consumed *`r euro_table %>% filter(Country == "Norway" & Year == 2018) %>% select(Percentage)`%* of it's energy as renewable energy in 2018, followed by Iceland at *`r euro_table %>% filter(Country == "Iceland" & Year == 2018) %>% select(Percentage)`%*, Sweden at *`r euro_table %>% filter(Country == "Sweden" & Year == 2018) %>% select(Percentage)`%* and Finland at *`r euro_table %>% filter(Country == "Finland" & Year == 2018) %>% select(Percentage)`%*. Although Iceland and Norway don't have a 2020 target, they are well above their European counterparts and it is fair to say they have surpassed all renewable energy target level. Finland has surpassed their 2020 target level in 2014 and Sweden all the back in 2012!
 
-Cyprus, Denmark, Germany and the United Kingdom have a trend that is most noticeable to see as countries with the share of renewable energy consistently increasing over the years. Cyprus has increased from 6.1% in 13.8% and have already surpassed their 2020 target level of 13%! Denmark reported the largest increase over the 9 year period from 21.8% to 35.7% and reached their 2020 target of 30% way back in 2015! Germany has increased 11.6% to 16.4% and are on track to reach their 2020 target of 18%. The United Kingdom has increased from 3.7% to 11% and are on track to reach their 2020 target of 15%.
+Cyprus, Denmark, Germany and the United Kingdom have a trend that is most noticeable to see as countries with the share of renewable energy consistently increasing over the years. Cyprus has increased from *`r euro_table %>% filter(Country == "Cyprus" & Year == 2010) %>% select(Percentage)`%* in *`r euro_table %>% filter(Country == "Cyprus" & Year == 2018) %>% select(Percentage)`%* and have already surpassed their 2020 target level of *`r euro_table %>% filter(Country == "Cyprus" & Year == 2020) %>% select(Percentage)`%*! Denmark reported the largest increase over the 9 year period from *`r euro_table %>% filter(Country == "Denmark" & Year == 2010) %>% select(Percentage)`%* to *`r euro_table %>% filter(Country == "Denmark" & Year == 2018) %>% select(Percentage)`%* and reached their 2020 target of *`r euro_table %>% filter(Country == "Denmark" & Year == 2020) %>% select(Percentage)`%* way back in 2015! Germany has increased *`r euro_table %>% filter(Country == "Germany" & Year == 2010) %>% select(Percentage)`%* to *`r euro_table %>% filter(Country == "Germany" & Year == 2018) %>% select(Percentage)`%* and are on track to reach their 2020 target of *`r euro_table %>% filter(Country == "Germany" & Year == 2020) %>% select(Percentage)`%*. The United Kingdom has increased from *`r euro_table %>% filter(Country == "United Kingdom" & Year == 2010) %>% select(Percentage)`%* to *`r euro_table %>% filter(Country == "United Kingdom" & Year == 2018) %>% select(Percentage)`%* and are on track to reach their 2020 target of *`r euro_table %>% filter(Country == "United Kingdom" & Year == 2020) %>% select(Percentage)`%*.
 
-Albania and Montenegro have been going down in the share of their renewable energy. Montenegro has reported a 5.2% reduction dropping from 44% in 2014 to 38.8% in 2018. Albania has seen an inconsistent trend and recently dropped to 34.8% in 2018 from an all time high of 35.5% in 2016.
+Albania and Montenegro have been going down in the share of their renewable energy. Montenegro has reported a 5.2% reduction dropping from *`r euro_table %>% filter(Country == "Montenegro" & Year == 2014) %>% select(Percentage)`%* in 2014 to *`r euro_table %>% filter(Country == "Montenegro" & Year == 2018) %>% select(Percentage)`%* in 2018. Albania has seen an inconsistent trend and recently dropped to *`r euro_table %>% filter(Country == "Albania" & Year == 2018) %>% select(Percentage)`%* in 2018 from an all time high of *`r euro_table %>% filter(Country == "Albania" & Year == 2016) %>% select(Percentage)`%* in 2016.
 
 # Conclusion 
 
@@ -804,7 +804,7 @@ The pumped hydro power which was earlier included within the hydro power analysi
 
 Many countries have in fact surpassed their 2020 target level by 2018. Countries like Iceland, Norway, Sweden, Finland and Denmark are dominating the field and charging ahead of the pack to cement their status as the front runners in sustainability practices. Thus we can conclude that the European continent is adopting more of a renewable energy source as the means to generate, supply and consume its energy. This helps us to answer our original question and we can confidently say Europe is leading towards a more sustainable future as they adopt a renewable energy consumption approach.
 
-# Acknowledgment
+# Acknowledgments
 
 @bookdown\
 @forcats\
